starting auth api
