# backend-api/api/controllers/auth.js
@@ -6,7 +6,8 @@ function createToken(user) {
   return jwt.sign({ user: user.name, profile: user.profile }, config.jwtSecret, { expiresInMinutes: 60 * 5 })
 }
 
-const jwtAuth = (req, res) => {
+const authUserByPassword = (req, res) => {
+  // return res.status(200).json({ prueba: 'A ver si funciona' })
   const username = req.swagger.params.username.value
   console.log(`user es :${username}`)
   const password = req.swagger.params.password.value
@@ -26,5 +27,5 @@ const jwtAuth = (req, res) => {
 
 
 module.exports = {
-  jwtAuth
+  authUserByPassword
 }
